--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
 					{% endif %}
 				{% endwith %}
 				<!-- Flashing Messages -->
-				
+
 				<div id="connecting_info" class="text-center alert alert-info flash alert-dismissible fade show" role="alert">
 			        Welcome to <img src="{{ url_for('static', filename='images/favicon.png') }}" height="30" class="d-inline-block align-top" alt="mdb logo"> <b> <span class="text-warning">Codeforces</span> <span class="text-primary">Upsolving</span> <span class="text-danger">Helper</span></b>. Feel free to raise <a target="_blank" href="https://github.com/pirateksh/codeforces-upsolving-helper/issues" class="alert-link">issues</a> / <a target="_blank" href="https://github.com/pirateksh/codeforces-upsolving-helper/pulls" class="alert-link">pull requests</a> regarding bugs / improvements.
 			        <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -132,9 +132,6 @@
 									</div>
 								</form>
 							</div>
-							<!-- <div class="card-footer text-muted">
-							    Index : A, B, C, and so on. | Rating : <1000, >=1000 && <1500 and so on.
-							</div> -->
 						</div>
 						<br/>
 						<section id="segregationInfo">
@@ -143,26 +140,78 @@
 						    </div>	
 						</section>
 						
+						<!-- Problems Segregated by Index -->
 						<section id="byIndex">
 							{% for index, problems in unsolved_info.unsolved_problem_by_index.items() %}
 								<br/>
 								<div class="card text-center">
 									<div class="card-header">
-										{% if index == '#' %}Other(s){% else %}{{ index }}{% endif %} (Total: {{ problems|length }})
+										<b>
+										{% if index == '#' %}Other(s){% else %}{{ index }}{% endif %} (Total: {{ problems['r']|length + problems['u']|length }})
+										</b>
 									</div>
 									<div class="class-body">
-										{% for problem in problems %} 
-											<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}) {% else %}(unrated){% endif %}</a></p>
-										{% endfor %}
+										{% if problems['r']|length > 0 and problems['u']|length > 0 %}
+											<!-- For >= Large Screens -->
+											<div class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
+												<div class="row">
+													<div class="col-6">
+														<p class="text-center"><b><u>Rated (Total: {{ problems['r']|length }})</u></b></p>
+														{% for problem in problems['r'] %} 
+															<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}) {% else %}(unrated){% endif %}</a></p>
+														{% endfor %}
+													</div>
+													<div class="col-6">
+														<p class="text-center"><b><u>Unrated (Total: {{ problems['u']|length }})</u></b></p>
+														{% for problem in problems['u'] %} 
+															<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }}</a></p>
+														{% endfor %}
+													</div> 
+												</div>
+											</div>
+											<!-- For >= Large Screens -->
+											<!-- For Less than Large Screens -->
+											<div class="d-xs-block d-sm-none d-md-none d-lg-none d-xl-none">
+												<!-- <div class="row"> -->
+													<p class="text-center"><b><u>Rated (Total: {{ problems['r']|length }})</u></b></p>
+													{% for problem in problems['r'] %} 
+														<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}) {% else %}(unrated){% endif %}</a></p>
+													{% endfor %}
+													<hr/>
+												<!-- </div>
+												<div class="row"> -->
+													<p class="text-center"><b><u>Unrated (Total: {{ problems['u']|length }})</u></b></p>
+													{% for problem in problems['u'] %} 
+														<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }}</a></p>
+													{% endfor %}
+												<!-- </div> -->
+											</div>
+											<!-- For Less than Large Screens -->
+										{% elif problems['r']|length > 0 and problems['u']|length == 0 %}
+											<p class="text-center"><u>All are <b>Rated</b> in <b>{% if index == '#' %}Other(s){% else %}{{ index }}{% endif %}</b></u></p>
+											{% for problem in problems['r'] %} 
+												<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}) {% else %}(unrated){% endif %}</a></p>
+											{% endfor %}
+										{% elif problems['r']|length == 0 and problems['u']|length > 0 %}
+											<p class="text-center"><u>All are <b>Unrated</b> in <b>{% if index == '#' %}Other(s){% else %}{{ index }}{% endif %}</b></u></p>
+											{% for problem in problems['u'] %} 
+												<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }}</a></p>
+											{% endfor %}
+										{% endif %}
+										
 									</div>
 								</div>
 							{% endfor %}
 						</section>
+						<!-- Problems Segregated by Index -->
+
+						<!-- Problems Segregated by Rating -->
 						<section id="byRating">
 							{% for rating_category, problems in unsolved_info.unsolved_problem_by_rating.items() %}
 								<br/>
 								<div class="card text-center">
 									<div class="card-header">
+										<b>
 										{% if rating_category == '1' %} Less than 1000
 										{% elif rating_category == '2' %} Between 1000 and 1200 (inclusive)
 										{% elif rating_category == '3' %} Between 1300 and 1400 (inclusive)
@@ -177,6 +226,7 @@
 										{% elif rating_category == '12' %} Greater than or equal to 3500
 										{% elif rating_category == '13' %} Unrated
 										{% endif %}(Total: {{ problems|length }})
+										</b>
 									</div>
 									<div class="class-body">
 										{% for problem in problems %} 
@@ -186,6 +236,7 @@
 								</div>
 							{% endfor %}
 						</section>
+						<!-- Problems Segregated by Rating -->
 					{% else %}
 						<div class="card text-center">
 							<div class="card-header">
