--- a/templates/messages.html
+++ b/templates/messages.html
@@ -2,7 +2,7 @@
 {% with messages = get_flashed_messages(with_categories=true) %}
 	{% if messages %}
 		{% for category, message in messages %}
-			{% if category == 'error' %}
+			{% if category == 'danger' %}
 				<div id="connected_danger" class="text-center alert alert-danger flash alert-dismissible fade show" role="alert">
 		            {{ message }}
 		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -11,6 +11,20 @@
 		        </div>
 			{% elif category == 'success' %}
 				<div id="connected_success" class="text-center alert alert-success flash alert-dismissible fade show" role="alert">
+		            {{ message }}
+		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    	<span aria-hidden="true">&times;</span>
+				  	</button>
+		        </div>
+		    {% elif category == 'warning' %}
+				<div id="connected_success" class="text-center alert alert-warning flash alert-dismissible fade show" role="alert">
+		            {{ message }}
+		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    	<span aria-hidden="true">&times;</span>
+				  	</button>
+		        </div>
+		    {% elif category == 'info' %}
+				<div id="connected_success" class="text-center alert alert-info flash alert-dismissible fade show" role="alert">
 		            {{ message }}
 		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				    	<span aria-hidden="true">&times;</span>
